implement SystemVerilog-style interface class
Introduces a `Interface` class to streamline hardware-centric signal
grouping, mimicking SystemVerilog interfaces. This reduces boilerplate
when connecting large modules and provides flexible signal selection.

Key Features:
- Core signal grouping logic for bundling related wires/buses.
- Pattern-based signal selection using both Glob and Regex for
  bulk connectivity.
- Support for explicit signal assignment to prevent ambiguous
  port mapping.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,9 @@ classifiers = [
 ]
 
 dynamic = [ "version" ]
+dependencies = [
+    "cocotb>=2.0.1",
+]
 
 [tool.setuptools.dynamic]
 version = { attr = "cocotbext.interface.__version__" }
