add modport support for interface access control
Introduces `modport` functionality to the `Interface` class, enabling
SystemVerilog-like directional constraints and method scoping.

Key Features:
- Implemented `Modport` definition within the `Interface` class.
- Added directionality enforcement (input, output, inout) for signals
  accessed via a specific modport.
- Integrated method access control, allowing specific functions to be
  exposed or hidden based on the active modport.
- Updated signal assignment logic to throw errors on illegal
  assignments (e.g., driving a signal marked as 'input' in the modport).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,8 @@ dependencies = [
 
 [tool.setuptools.dynamic]
 version = { attr = "cocotbext.interface.__version__" }
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+]
