implement clocking blocks for synchronous signal timing
Introduces `clocking` support within the `Interface` to model
cycle-accurate signal sampling and driving, matching SystemVerilog
clocking block semantics.

Key Features:
- Synchronous Sampling/Driving: Signals within a clocking block
  now update relative to a specified clock edge.
- Input/Output Skews: Added support for sampling and
  delayed driving to model setup/hold requirements.
- Modport Integration: Enabled modports to reference clocking
  blocks, enforcing synchronous access for specific modules.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "cocotbext-interface"
-description = "An interface class for conneting test environment to DUT"
+description = "System Verilog style interface class for connecting Cocotb to DUT"
 readme = "README.md"
 license = { file = "LICENSE" }
 maintainers = [
@@ -22,15 +22,17 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: 3.14",
+  "Topic :: Scientific/Engineering",
+  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
 ]
 
 dynamic = [ "version" ]
 dependencies = [
-    "cocotb>=2.0.1",
+    "cocotb>=2",
 ]
 
 [tool.setuptools.dynamic]
-version = { attr = "cocotbext.interface.__version__" }
+version = { attr = "cocotbext.interface._version.__version__" }
 
 [dependency-groups]
 dev = [
